# concise

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile-pg  MIGRATION_TO_POSTGRESQL.md  TENANT_ID_MIGRATION.md  cmd.txt  docker-compose.yml  prompts.md  sources-http.list  views.sql
backend/: .dockerignore  .gitignore  Cargo.toml  DATA_TABLE_API.md  DATA_TABLE_ENTITIES.md  DATA_TABLE_IMPLEMENTATION.md  DATA_TABLE_UPLOAD_API.md  Dockerfile  EXECUTE_SQL_API.md  EXECUTE_SQL_EXAMPLE.md  EXECUTE_SQL_FEATURE.md  EXECUTE_SQL_QUICK_START.md  QUERY_API.md  QUERY_ARCHITECTURE.md  QUERY_QUICK_START.md  QUERY_TEMPLATE_USAGE.md  README.md  UPLOAD_EXAMPLE.md  UPLOAD_IMPLEMENTATION_SUMMARY.md  test_data_table_api.sh  test_execute_sql.sh  test_query_api.sh  test_upload_data.sh
backend/config/: README.md  default.toml
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20240101_000001_create_users_table.rs  m20240101_000002_create_data_sources_table.rs  m20240101_000003_create_storages_table.rs  m20241202_000001_add_tenant_id_to_data_sources.rs  m20241202_000002_add_tenant_id_to_storages.rs  m20241202_000003_add_tenant_id_to_users.rs  m20241202_000004_create_views_table.rs  m20241226_000001_create_data_tables_table.rs  m20241226_000002_create_data_table_columns_table.rs  m20241226_000003_create_data_table_usages_table.rs
backend/src/: config.rs  lib.rs  main.rs
backend/src/api/: auth.rs  data_source.rs  data_table.rs  data_table_column.rs  data_table_usage.rs  executor.rs  middleware.rs  mod.rs  query.rs  storage.rs  task.rs
backend/src/domain/: auth.rs  data_source.rs  data_table.rs  data_table_column.rs  data_table_usage.rs  error.rs  executor.rs  mod.rs  storage.rs  task.rs
backend/src/entities/: data_source.rs  data_table.rs  data_table_column.rs  data_table_usage.rs  mod.rs  storage.rs  user.rs  view.rs
backend/src/repository/: data_source.rs  (+7 more)
(+49 files in other folders)
