[package]
name = "data-lakehouse"
version = "0.1.0"
edition = "2021"

[dependencies]
# Migration
migration = { path = "migration" }
# Web framework
axum = { version = "0.8.5", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
http = "1.0"

# Database and ORM
sea-orm = { version = "1.1.17", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "debug-print", "mock"] }
sea-orm-migration = "1.1.17"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }

# Redis
redis = { version = "0.21", features = ["tokio-comp"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID and time
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.4"

# Error handling
thiserror = "1.0"

# Async traits
async-trait = "0.1"
futures = "0.3"

# HTTP client
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
bytes = "1.0"

# Configuration
config = "0.13"

# Logging
log = "0.4"
tklog = "0.3.0"

# Authentication
bcrypt = "0.15"
jsonwebtoken = "9.3"

# Excel parsing
calamine = "0.26"

# Regex
regex = "1.10"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
