[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
sea-orm-migration = "1.1.17"
tokio = { version = "1.0", features = ["full"] }

[dependencies.sea-orm]
version = "1.1.17"
features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros",
]
